# src/routes/specifications.routes.ts
@@ -1,14 +1,11 @@
-import { response, Router } from 'express';
-import { SpecificationsRepository } from '../modules/cars/repositories/implementations/SpecificationsRepository';
-import { createSpecificationController } from '../modules/cars/useCases/createSpecification';
-import { CreateSpecificationUseCase } from '../modules/cars/useCases/createSpecification/CreateSpecificationUseCase';
+import { Router } from 'express';
+
+import { CreateSpecificationController } from '../modules/cars/useCases/createSpecification/CreateSpecificationController';
 
 const specificationRoutes = Router();
 
-const specificationsRepository = new SpecificationsRepository();
+const createSpecificationController = new CreateSpecificationController();
 
-specificationRoutes.post('/', (request, response) => {
-    return createSpecificationController.handle(request, response);
-});
+specificationRoutes.post('/', createSpecificationController.handle);
 
 export { specificationRoutes };
